# AdvancedProgramming2025

./: CMakeLists.txt  Readme.md
source/: background_tag.h  camera2d.h  component.h  dungeon_generator.h  dungeon_restrictor.h  enemy.h  food.cpp  food.h  food_consumer.h  food_generator.h  game_object.h  health.h  hero.h  image.cpp  image.h  init_world.cpp  main.cpp  math2d.h  predator.h  render.cpp  restrictor.h  sprite.h  stamina.h  starvation_system.h  tileset.h  tiredness_system.h  transform2d.h  world.h
